# deepblu-tools

./: .gitignore  .pre-commit-config.yaml  README.md  autofollow.js  autoliker.py  backup.uddf  backupdives.py  blah.uddf  deepblu_api.py  deepblu_backup.py  deepblu_logbook.py  deepblu_tools.py  deepblu_user.py  getdepth.py  index.php  login  pyproject.toml  requirements.txt  response  response2.json  setup.cfg  suit.uddf  template.uddf  test.oddf  test.test  uddf_writer.py
done/: .htaccess
extra/: autofollow.js  autoliker.py
schemas/: uddf_3.2.2.xsd
src/deepblu_tools/: deepblu_api.py  utils.py
src/deepblu_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/deepblu_tools/deepblu_tools.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/deepblu_tools/models/: uddf.py
src/deepblu_tools/models/deepblu/: __init__.py  buddy.py  dive_base.py  dive_gear.py  dive_log.py  dive_profile.py  dive_spot.py  equipment.py  gas_definition.py  log_book.py  medium.py  user.py  way_point.py
web/: index.php
