[metadata]
name = deepblu-tools
description = Deepblu Tools
version = 2.0.1
author = Sander Van de Moortel
author_email = sander.vandemoortel@gmail.com
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bluppfisk/deepblu-tools/
project_urls =
    Documentation = https://github.com/bluppfisk/deepblu-tools/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[easy_install]

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

install_requires=
    requests==2.28.1
    xsdata==22.7
    click==8.1.3

[options.packages.find]
where =
    src

[options.extras_require]
develop =
    flake8
    black
    virtualenv

[options.entry_points]
console_scripts =
    deepblu-backup = deepblu_tools.bin.cli:main

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    build
    dist
    .eggs
